--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- daisy ui -->
+     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+
     <!-- telwind cnd -->
          <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
 </head>
-<body>
+<!-- login 1st section -->
+<body class="bg-[#f4f5f7] h-[100vh] flex justify-center items-center">
+    <form class="bg-white rounded-2xl p-5 w-[350px]"> 
+       <div>
+         <label for="" class="font-semibold"> Mobile Number</label>
+        <br>
+        <input type="text" placeholder="Enter Your Mobile Number" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
+       </div>
+
+        <div class="mt-5">
+         <label for="" class="font-semibold">4-digit Number</label>
+        <br>
+        <input type="text" placeholder="Enter 4-digit pin" class="input bg-[#f4f5f7] mt-3 rounded-3xl" />
+       </div>
+       <button class="btn btn-primary mt-5 w-full rounded-3xl text-white">Login</button>
+    </form>
     
 </body>
 </html>
